--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,24 +7,27 @@ on:
     branches: [ "master" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v2
+    
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '18'
+    
     - run: npm ci
     - run: npm run build
-    - name: Docker Login
-      uses: docker-practice/actions-login@master
+    
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+    
     - name: Build and push Docker image
       run: |
-        docker build -t logiance-frontend .
-        docker push logiance-frontend:latest
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/logiance-frontend:latest .
+        docker push ${{ secrets.DOCKER_USERNAME }}/logiance-frontend:latest
