--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,4 @@
 name: CI/CD
-
 on:
   push:
     branches: [ "master" ]
@@ -21,6 +20,12 @@ jobs:
     - run: npm ci
     - run: npm run build
     
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
@@ -28,6 +33,9 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
     
     - name: Build and push Docker image
-      run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/logiance-frontend:latest .
-        docker push ${{ secrets.DOCKER_USERNAME }}/logiance-frontend:latest
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: ${{ secrets.DOCKER_USERNAME }}/logiance-frontend:latest
